--- a/.versionbot/CHANGELOG.yml
+++ b/.versionbot/CHANGELOG.yml
@@ -1,4 +1,18 @@
 - commits:
+    - subject: "device-provisioning: Stop reporting conflict errors"
+      hash: 972230888fddc193ceec10f086af593fd692ad2a
+      body: ""
+      footer:
+        Change-type: patch
+        change-type: patch
+        See: https://balena.zulipchat.com/#narrow/stream/345887-aspect.2Fpeople-ops/topic/Sentry.20Billing.20changes
+        see: https://balena.zulipchat.com/#narrow/stream/345887-aspect.2Fpeople-ops/topic/Sentry.20Billing.20changes
+      author: Thodoris Greasidis
+      nested: []
+  version: 13.0.3
+  title: ""
+  date: 2023-06-14T12:50:05.952Z
+- commits:
     - subject: Combine two of the rules about supervisor releases managing devices
       hash: 1dd8e416c5c6f7be9f36a02d8e0d673a152f0447
       body: ""
