--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -21,3 +21,5 @@ jobs:
     secrets: inherit
     with:
       docker_images: balena/open-balena-api
+      # This allows external PRs to run custom actions so the custom actions must be safe to run in that context
+      restrict_custom_actions: false
