--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "request": "^2.88.2",
     "rsmq": "^0.12.4",
     "semver": "^7.5.0",
+    "snappy": "^7.2.2",
     "strict-event-emitter-types": "^2.0.0",
     "supervisor": "^0.12.0",
     "tar": "^6.1.13",
