Add S3 webresource handler
Change-type: minor

--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -53,5 +53,14 @@ keys = [
 	"VPN_PORT",
 	"VPN_SERVICE_API_KEY",
 	"VPN_GUEST_API_KEY",
-	"VPN_CONNECT_PROXY_PORT"
+	"VPN_CONNECT_PROXY_PORT",
+	"WEBRESOURCES_S3_ACCESS_KEY",
+	"WEBRESOURCES_S3_SECRET_KEY",
+	"WEBRESOURCES_S3_REGION",
+	"WEBRESOURCES_S3_HOST",
+	"WEBRESOURCES_S3_BUCKET",
+	"WEBRESOURCES_S3_MAX_FILESIZE",
+	"WEBRESOURCES_CLOUDFRONT_PUBLICKEY",
+	"WEBRESOURCES_CLOUDFRONT_HOST",
+	"WEBRESOURCES_CLOUDFRONT_PRIVATEKEY_PATH"
 ]
