New CONTRACT_ALLOWLIST option to limit device types/contracts
Resolves: #1433
Change-type: minor

--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -29,6 +29,7 @@ keys = [
 	"IMAGE_STORAGE_FORCE_PATH_STYLE",
 	"IMAGE_STORAGE_PREFIX",
 	"IMAGE_STORAGE_SECRET_KEY",
+	"CONTRACT_ALLOWLIST",
 	"JSON_WEB_TOKEN_EXPIRY_MINUTES",
 	"JSON_WEB_TOKEN_SECRET",
 	"MIXPANEL_TOKEN",
