--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.3.8",
+    "@balena/pinejs": "15.3.10-build-allows-upload-on-synonyms-1f6f5aa7e60fe7e6ce938b97f072d13dcaa8012c-1",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.49.0",
     "@types/basic-auth": "^1.1.3",
