--- a/docker-compose.test-custom.yml
+++ b/docker-compose.test-custom.yml
@@ -23,6 +23,30 @@ services:
       - "3100:3100"
     networks:
       - local-test
+  minio-server:
+    image: minio/minio
+    restart: always
+    environment:
+      MINIO_ROOT_USER: USERNAME
+      MINIO_ROOT_PASSWORD: PASSWORD
+    command: server /data --console-address ":9001"
+    ports:
+      - "43680:9000"
+      - "43697:9001"
+    networks:
+      - local-test
+  minio-client:
+    image: minio/mc
+    depends_on:
+      - minio-server
+    entrypoint: >
+      /bin/sh -c "
+      /usr/bin/mc config host add minio-server http://minio-server:9000 USERNAME PASSWORD;
+      /usr/bin/mc mb --ignore-existing minio-server/balena-pine-web-resources;
+      sleep infinity;
+      "
+    networks:
+      - local-test
   sut:
     build:
       context: ./
@@ -33,6 +57,7 @@ services:
       - "db"
       - "redis"
       - "loki"
+      - "minio-client"
     ports:
       - "9228:9229"
     networks:
@@ -89,6 +114,12 @@ services:
       VPN_PORT: 5433
       VPN_SERVICE_API_KEY: vpn_service_api_key
       VPN_SERVICE_CONNECTIONS: 5
+      WEBRESOURCES_S3_ACCESS_KEY: USERNAME
+      WEBRESOURCES_S3_SECRET_KEY: PASSWORD
+      WEBRESOURCES_S3_REGION: devenv
+      WEBRESOURCES_S3_HOST: http://minio-server:9000
+      WEBRESOURCES_S3_BUCKET: balena-pine-web-resources
+      WEBRESOURCES_S3_MAX_FILESIZE: 50000000
 
   sut-fast:
       build:
@@ -99,6 +130,7 @@ services:
         - "db"
         - "redis"
         - "loki"
+        - "minio-client"
       ports:
         - "9228:9229"
       networks:
