--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.3.10",
+    "@balena/pinejs": "15.3.13-build-does-not-allow-application-json-on-webresource-9a525e59f0a61510bb93ee2f87321acd88b51635-1",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.49.0",
     "@types/basic-auth": "^1.1.3",
