--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@types/redlock": "^4.0.4",
     "@types/request": "^2.48.8",
     "@types/semver": "^7.3.13",
+    "@types/statuses": "^2.0.4",
     "@types/tar": "^6.1.4",
     "@types/uuid": "^9.0.1",
     "@types/validator": "^13.7.15",
@@ -111,6 +112,7 @@
     "rsmq": "^0.12.4",
     "semver": "^7.5.0",
     "snappy": "^7.2.2",
+    "statuses": "^2.0.1",
     "strict-event-emitter-types": "^2.0.0",
     "supervisor": "^0.12.0",
     "tar": "^6.1.13",
