--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@balena/env-parsing": "^1.1.5",
     "@balena/es-version": "^1.0.2",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.3.28",
+    "@balena/pinejs": "15.3.33-build-webresource-461b9ac61df9ad2221cb3dbb2f5a60586147d314-2",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.49.0",
     "@types/basic-auth": "^1.1.3",
