--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@balena/env-parsing": "^1.1.10",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.3.28",
+    "@balena/pinejs": "15.4.5",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.91.0",
     "@types/basic-auth": "^1.1.7",
