Replace `request` with `axios`
Drop in replacement for `request` with `got` is not possible, as `got` no proxy support has. `Axios` comes with proxy support and similar size of package as `got`.

Change-type: major
Signed-off-by: Harald Fischer <harald@balena.io>
Signed-off-by: fisehara <harald@balena.io>

--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@types/proxy-addr": "^2.0.0",
     "@types/randomstring": "^1.1.8",
     "@types/redlock": "^4.0.4",
-    "@types/request": "^2.48.8",
     "@types/semver": "^7.3.13",
     "@types/tar": "^6.1.4",
     "@types/uuid": "^9.0.1",
@@ -72,6 +71,7 @@
     "array-sort": "^1.0.0",
     "avsc": "^5.7.7",
     "aws-sdk": "^2.1365.0",
+    "axios": "^1.5.1",
     "balena-device-config": "^6.3.0",
     "balena-semver": "^2.3.2",
     "basic-auth": "^2.0.1",
@@ -107,7 +107,6 @@
     "randomstring": "^1.2.3",
     "rate-limiter-flexible": "^2.4.1",
     "redlock": "^4.2.0",
-    "request": "^2.88.2",
     "rsmq": "^0.12.4",
     "semver": "^7.5.0",
     "snappy": "^7.2.2",
@@ -116,6 +115,7 @@
     "tar": "^6.1.13",
     "thirty-two": "^1.0.2",
     "ts-node": "^10.9.1",
+    "tunnel": "^0.0.6",
     "typed-error": "^3.2.2",
     "typescript": "^5.2.2",
     "uuid": "^9.0.0",
