--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "Node16",
 		"target": "es2022",
 		"declaration": true,
 		"outDir": "dist/",
@@ -24,5 +24,11 @@
 	],
 	"exclude": [
 		"node_modules"
-	]
+	],
+	"ts-node": {
+		"esm": true,
+		"experimentalResolver": true,
+		"experimentalTsImportSpecifiers": true,
+		"transpileOnly": true
+	}
 }
