package.json: Add cache & config as exports/package entry points
That's to allow consumers to access them
before the pine gets imported/initialized.

Change-type: minor

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "type": "commonjs",
   "main": "dist/index",
+  "exports": {
+    ".": "./dist/index.js",
+    "./cache": "./dist/infra/cache/index.js",
+    "./config": "./dist/lib/config.js",
+    "./dist/*": "./dist/*"
+  },
   "files": [
     "dist/"
   ],
