--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@balena/env-parsing": "^1.1.10",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.6.1",
+    "@balena/pinejs": "15.7.0-build-joshbwlng-tasks-48d91f42d4c1907ea0cb7ae7b8458a8ea3de3759-1",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.99.0",
     "@types/basic-auth": "^1.1.8",
