--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@balena/env-parsing": "^1.1.10",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^15.6.1",
+    "@balena/pinejs": "15.7.0-build-role-based-tokens-156732929ff40205a9c4e6cd334606dac378533c-1",
     "@balena/pinejs-webresource-cloudfront": "^0.0.5",
     "@sentry/node": "^7.99.0",
     "@types/basic-auth": "^1.1.8",
