--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     ".": "./dist/index.js",
     "./cache": "./dist/infra/cache/index.js",
     "./config": "./dist/lib/config.js",
+    "./models/balena.sbvr": "./dist/balena.sbvr",
+    "./models/balena-init.sql": "./dist/balena-init.sql",
+    "./models/v6.sbvr": "./dist/translations/v6/v6.sbvr",
     "./dist/*": "./dist/*"
   },
   "files": [
