push optional OpenVPN UDP host to clients
Co-authored-by: Thodoris Greasidis <thgreasi@gmail.com>

change-type: minor

--- a/config/confd/conf.d/env.toml
+++ b/config/confd/conf.d/env.toml
@@ -1,67 +1,4 @@
 [template]
 src = "env.tmpl"
 dest = "/usr/src/app/config/env"
-keys = [
-	"API_VPN_SERVICE_API_KEY",
-	"AUTH_RESINOS_REGISTRY_CODE",
-	"COOKIE_SESSION_SECRET",
-	"CONTRACTS_PUBLIC_REPO_OWNER",
-	"CONTRACTS_PUBLIC_REPO_NAME",
-	"CONTRACTS_PUBLIC_REPO_BRANCH",
-	"CONTRACTS_PRIVATE_REPO_OWNER",
-	"CONTRACTS_PRIVATE_REPO_NAME",
-	"CONTRACTS_PRIVATE_REPO_BRANCH",
-	"CONTRACTS_PRIVATE_REPO_TOKEN",
-	"DB_HOST",
-	"DB_PASSWORD",
-	"DB_PORT",
-	"DB_USER",
-	"DB_NAME",
-	"DELTA_HOST",
-	"DEVICE_CONFIG_OPENVPN_CA",
-	"DEVICE_CONFIG_SSH_AUTHORIZED_KEYS",
-	"FILES_HOST",
-	"HOST",
-	"TRUST_PROXY",
-	"IMAGE_STORAGE_ACCESS_KEY",
-	"IMAGE_STORAGE_BUCKET",
-	"IMAGE_STORAGE_ENDPOINT",
-	"IMAGE_STORAGE_FORCE_PATH_STYLE",
-	"IMAGE_STORAGE_PREFIX",
-	"IMAGE_STORAGE_SECRET_KEY",
-	"CONTRACT_ALLOWLIST",
-	"JSON_WEB_TOKEN_EXPIRY_MINUTES",
-	"JSON_WEB_TOKEN_SECRET",
-	"MIXPANEL_TOKEN",
-	"PRODUCTION_MODE",
-	"REDIS_HOST",
-	"REDIS_AUTH",
-	"LOGS_HOST",
-	"LOKI_HOST",
-	"LOKI_PORT",
-	"LOKI_WRITE_PCT",
-	"REGISTRY2_HOST",
-	"SENTRY_DSN",
-	"SUPERUSER_EMAIL",
-	"SUPERUSER_PASSWORD",
-	"TOKEN_AUTH_BUILDER_TOKEN",
-	"TOKEN_AUTH_CERT_ISSUER",
-	"TOKEN_AUTH_CERT_KEY",
-	"TOKEN_AUTH_CERT_KID",
-	"TOKEN_AUTH_CERT_PUB",
-	"TOKEN_AUTH_JWT_ALGO",
-	"VPN_HOST",
-	"VPN_PORT",
-	"VPN_SERVICE_API_KEY",
-	"VPN_GUEST_API_KEY",
-	"VPN_CONNECT_PROXY_PORT",
-	"WEBRESOURCES_S3_ACCESS_KEY",
-	"WEBRESOURCES_S3_SECRET_KEY",
-	"WEBRESOURCES_S3_REGION",
-	"WEBRESOURCES_S3_HOST",
-	"WEBRESOURCES_S3_BUCKET",
-	"WEBRESOURCES_S3_MAX_FILESIZE",
-	"WEBRESOURCES_CLOUDFRONT_PUBLICKEY",
-	"WEBRESOURCES_CLOUDFRONT_HOST",
-	"WEBRESOURCES_CLOUDFRONT_PRIVATEKEY_PATH"
-]
+keys = []
