WIP: multipart uploads for large assets
Change-type: major

--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "@balena/env-parsing": "^1.1.10",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^16.0.0",
-    "@balena/pinejs-webresource-cloudfront": "^0.1.0",
+    "@balena/pinejs": "17.0.0-build-v17-a23172f0d3c5aa4169ebb0f29d4939508c9074cf-2",
+    "@balena/pinejs-webresource-cloudfront": "0.1.1-build-use-s3-handler-622b09a67f3eba747fac871e0be4ae053c4dc4de-1",
     "@sentry/node": "^7.99.0",
     "@types/basic-auth": "^1.1.8",
     "@types/bluebird": "^3.5.42",
