--- a/docker-compose.test-custom.yml
+++ b/docker-compose.test-custom.yml
@@ -1,7 +1,7 @@
 version: "2.4"
 services:
   db:
-    image: balena/open-balena-db:master
+    image: balena/open-balena-db:v5.2.2
     ports:
       - "5432"
       - "5431:5432"
