Expire refreshed tokens within the same time as initial token.
Change-type: major
Signed-off-by: fisehara <harald@balena.io>

--- a/docker-compose.test-custom.yml
+++ b/docker-compose.test-custom.yml
@@ -81,8 +81,9 @@ services:
       IMAGE_STORAGE_PREFIX: images
       IMAGE_STORAGE_ACCESS_KEY: ACCESS_KEY
       IMAGE_STORAGE_SECRET_KEY: SECRET_KEY
-      JSON_WEB_TOKEN_EXPIRY_MINUTES: 10080
+      JSON_WEB_TOKEN_EXPIRY_MINUTES: 720
       JSON_WEB_TOKEN_SECRET: purple
+      JSON_WEB_TOKEN_LIMIT_EXPIRY_REFRESH: true
       LOGS_HOST: logs.balenadev.io
       METRICS_MAX_REPORT_INTERVAL_SECONDS: 3
       MIXPANEL_TOKEN: mixpanel_token
