--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@balena/env-parsing": "^1.1.12",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^17.0.0",
+    "@balena/pinejs": "17.0.1-build-otaviojacobi-test-a498dc0bd58816e6f3c11f4e08ba5f3c2e682a68-2",
     "@balena/pinejs-webresource-cloudfront": "^0.1.0",
     "@sentry/node": "^7.116.0",
     "@types/basic-auth": "^1.1.8",
