--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@balena/env-parsing": "^1.1.12",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "17.0.1-build-otaviojacobi-test-a498dc0bd58816e6f3c11f4e08ba5f3c2e682a68-2",
+    "@balena/pinejs": "17.0.1-build-otaviojacobi-test-60782e275c44f64f9ebb516902fbafd2bb596a7d-1",
     "@balena/pinejs-webresource-cloudfront": "^0.1.0",
     "@sentry/node": "^7.116.0",
     "@types/basic-auth": "^1.1.8",
@@ -111,6 +111,7 @@
     "on-finished": "^2.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pinejs-client-core": "6.15.0-build-model-based-typings-1077e19ef18cc4cede4d6401496a016fef459150-1",
     "proxy-addr": "^2.0.7",
     "randomstring": "^1.3.0",
     "rate-limiter-flexible": "^5.0.3",
