--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "fasttest-cleanup": "docker compose -f docker-compose.test-custom.yml down --rmi local --volumes",
     "materialize-config": "npm run fasttest -- --generate-config .materialized-config.json",
     "generate-model-schema": "npm run materialize-config && npx -p @balena/pinejs abstract-sql-compiler compile .materialized-config.json .materialized-schema.sql",
-    "_generate-model-types": "echo '/**\n * This file is auto-generated with `npm run generate-model-types`\n */\n' > src/balena-model.ts && npx abstract-sql-compiler generate-types .materialized-config.json >> src/balena-model.ts && balena-lint --typescript --fix src/balena-model.ts",
+    "_generate-model-types": "npx abstract-sql-compiler generate-types .materialized-config.json > src/balena-model.ts && balena-lint --typescript --fix src/balena-model.ts",
     "generate-model-types": "npm run materialize-config && npm run _generate-model-types",
     "check-model-types-generated": "./automation/check-model-types-generated.sh",
     "build": "npm run clean && tsc --project ./tsconfig.build.json && copyup \"src/**/*.sbvr\" \"src/**/*.sql\" dist/",
@@ -43,13 +43,13 @@
     "prepare": "node -e \"try { (await import('husky')).default() } catch (e) { if (e.code !== 'ERR_MODULE_NOT_FOUND') throw e }\" --input-type module"
   },
   "dependencies": {
-    "@balena/abstract-sql-compiler": "^9.1.4",
+    "@balena/abstract-sql-compiler": "^9.2.0",
     "@balena/env-parsing": "^1.1.12",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^17.0.0",
+    "@balena/pinejs": "^17.0.3",
     "@balena/pinejs-webresource-cloudfront": "^0.1.0",
-    "@sentry/node": "^7.116.0",
+    "@sentry/node": "^7.117.0",
     "@types/basic-auth": "^1.1.8",
     "@types/bluebird": "^3.5.42",
     "@types/cache-manager": "^4.0.6",
@@ -63,11 +63,11 @@
     "@types/express-serve-static-core": "^4.19.3",
     "@types/json-schema": "^7.0.15",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/lodash": "^4.17.4",
+    "@types/lodash": "^4.17.5",
     "@types/memoizee": "^0.4.11",
     "@types/morgan": "^1.9.9",
     "@types/ndjson": "^2.0.4",
-    "@types/node": "^20.14.2",
+    "@types/node": "^20.14.5",
     "@types/node-schedule": "^2.1.7",
     "@types/on-finished": "^2.3.4",
     "@types/passport-jwt": "^4.0.1",
@@ -78,9 +78,9 @@
     "@types/semver": "^7.5.8",
     "@types/statuses": "^2.0.5",
     "@types/uuid": "^9.0.8",
-    "@types/validator": "^13.11.10",
+    "@types/validator": "^13.12.0",
     "avsc": "^5.7.7",
-    "aws-sdk": "^2.1635.0",
+    "aws-sdk": "^2.1644.0",
     "balena-device-config": "^6.3.0",
     "balena-semver": "^2.3.5",
     "basic-auth": "^2.0.1",
@@ -123,7 +123,7 @@
     "statuses": "^2.0.1",
     "strict-event-emitter-types": "^2.0.0",
     "supervisor": "^0.12.0",
-    "tar": "^7.2.0",
+    "tar": "^7.4.0",
     "thirty-two": "^1.0.2",
     "ts-node": "^10.9.2",
     "typed-error": "^3.2.2",
@@ -142,11 +142,11 @@
     "chai": "^5.1.1",
     "copyfiles": "^2.4.1",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.5",
+    "lint-staged": "^15.2.7",
     "mocha": "^10.4.0",
     "mockery": "^2.1.0",
     "nock": "^13.5.4",
-    "pinejs-client-supertest": "^2.0.3",
+    "pinejs-client-supertest": "^2.0.4",
     "rimraf": "^5.0.7",
     "sinon": "^18.0.0",
     "supertest": "^7.0.0"
