--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "on-finished": "^2.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pinejs-client-core": "^6.15.9",
     "proxy-addr": "^2.0.7",
     "randomstring": "^1.3.0",
     "rate-limiter-flexible": "^5.0.3",
