--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "clean": "rimraf dist/",
     "cleanup": "rm .fast-boot.json .pinejs-cache.json || true",
     "lint": "balena-lint src/ test/ init.ts index.js && tsc --noEmit --project .",
-    "prettify": "balena-lint --fix src/ test/ init.ts index.js",
+    "lint-fix": "balena-lint --fix src/ test/ init.ts index.js",
     "prepack": "npm run build",
     "test:compose": "./automation/test.sh",
     "test": "npm run lint",
@@ -48,9 +48,9 @@
     "@balena/env-parsing": "^1.1.12",
     "@balena/es-version": "^1.0.3",
     "@balena/node-metrics-gatherer": "^6.0.3",
-    "@balena/pinejs": "^17.1.1",
+    "@balena/pinejs": "^17.2.1",
     "@balena/pinejs-webresource-cloudfront": "^0.1.0",
-    "@sentry/node": "^8.11.0",
+    "@sentry/node": "^8.18.0",
     "@types/basic-auth": "^1.1.8",
     "@types/bluebird": "^3.5.42",
     "@types/cache-manager": "^4.0.6",
@@ -64,11 +64,11 @@
     "@types/express-serve-static-core": "^4.19.5",
     "@types/json-schema": "^7.0.15",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/lodash": "^4.17.5",
+    "@types/lodash": "^4.17.7",
     "@types/memoizee": "^0.4.11",
     "@types/morgan": "^1.9.9",
     "@types/ndjson": "^2.0.4",
-    "@types/node": "^20.14.8",
+    "@types/node": "^20.14.11",
     "@types/node-schedule": "^2.1.7",
     "@types/on-finished": "^2.3.4",
     "@types/passport-jwt": "^4.0.1",
@@ -81,7 +81,7 @@
     "@types/uuid": "^10.0.0",
     "@types/validator": "^13.12.0",
     "avsc": "^5.7.7",
-    "aws-sdk": "^2.1646.0",
+    "aws-sdk": "^2.1659.0",
     "balena-device-config": "^6.3.0",
     "balena-semver": "^2.3.5",
     "basic-auth": "^2.0.1",
@@ -112,15 +112,15 @@
     "on-finished": "^2.4.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "pinejs-client-core": "^6.15.9",
+    "pinejs-client-core": "^6.15.10",
     "proxy-addr": "^2.0.7",
     "randomstring": "^1.3.0",
     "rate-limiter-flexible": "^5.0.3",
-    "redis": "^4.6.14",
+    "redis": "^4.6.15",
     "redlock": "^4.2.0",
     "request": "^2.88.2",
     "rsmq": "^0.12.4",
-    "semver": "^7.6.2",
+    "semver": "^7.6.3",
     "snappy": "^7.2.2",
     "statuses": "^2.0.1",
     "strict-event-emitter-types": "^2.0.0",
@@ -129,12 +129,12 @@
     "thirty-two": "^1.0.2",
     "ts-node": "^10.9.2",
     "typed-error": "^3.2.2",
-    "typescript": "^5.5.2",
+    "typescript": "^5.5.3",
     "uuid": "^10.0.0",
     "validator": "^13.12.0"
   },
   "devDependencies": {
-    "@balena/lint": "^8.2.2",
+    "@balena/lint": "^8.2.7",
     "@types/chai": "^4.3.16",
     "@types/mocha": "^10.0.7",
     "@types/mockery": "^1.4.33",
@@ -143,13 +143,13 @@
     "@types/temp": "^0.9.4",
     "chai": "^5.1.1",
     "copyfiles": "^2.4.1",
-    "husky": "^9.0.11",
+    "husky": "^9.1.1",
     "lint-staged": "^15.2.7",
-    "mocha": "^10.4.0",
+    "mocha": "^10.6.0",
     "mockery": "^2.1.0",
     "nock": "^13.5.4",
     "pinejs-client-supertest": "^2.1.1",
-    "rimraf": "^6.0.0",
+    "rimraf": "^6.0.1",
     "sinon": "^18.0.0",
     "supertest": "^7.0.0"
   },
