Switch to self-hosted
change-type: patch

--- a/.github/workflows/flowzone.yml
+++ b/.github/workflows/flowzone.yml
@@ -23,8 +23,8 @@ jobs:
       docker_images: balena/open-balena-api
       docker_runs_on: >
         {
-          "linux/amd64": ["actuated-4cpu-16gb"],
-          "linux/arm64": ["actuated-arm64-4cpu-16gb"]
+          "linux/amd64": ["self-hosted","X64"],
+          "linux/arm64": ["self-hosted","ARM64"]
         }
       # This allows external PRs to run custom actions so the custom actions must be safe to run in that context
       restrict_custom_actions: false
